--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -656,11 +656,14 @@ section,
 /* Responsive Hero Text */
 @media (max-width: 768px) {
   .hero h2 {
-    font-size: 32px;
+    padding-top: 10px;
+    font-size: 38px;
+    text-align: center;
   }
 
   .hero p {
-    font-size: 20px;
+    font-size: 25px;
+    text-align: center;
   }
 }
 
@@ -769,29 +772,107 @@ section,
 }
 
 /* certificates */
-#certificates {
-  background-color: #ffff; /* Use your preferred color scheme */
+.cert {
+  padding-left: 1rem;
 }
 
-#certificates .card {
-  border: none;
-  transition: transform 0.3s ease-in-out;
+.slider {
+  display: flex;
+  padding: 0 35px;
+  align-items: center;
+  justify-content: center;
 }
 
-#certificates .card:hover {
-  transform: scale(1.05);
+#right, #left {
+  color: var(--text-color);
 }
 
-#certificates .card-img-top {
-  width: 100%;
-  height: auto;
+.wrapper {
+  display: flex;
+  max-width: 1200px;
+  position: relative;
+}
+
+.wrapper i {
+  top: 50%;
+  height: 44px;
+  width: 44px;
+  color: #343F4F;
+  cursor: pointer;
+  font-size: 1.15rem;
+  position: absolute;
+  text-align: center;
+  line-height: 44px;
+  background: #fff;
+  border-radius: 50%;
+  transform: translateY(-50%);
+  transition: transform 0.1s linear;
+}
+
+.wrapper i:active {
+  transform: translateY(-50%) scale(0.9);
+}
+
+.wrapper i:hover {
+  background: var(--first-color-light);
+}
+
+.wrapper i:first-child {
+  left: 10px; /* Adjust as needed */
+  display: block; /* Ensure left button is visible */
+}
+
+.wrapper i:last-child {
+  right: 10px; /* Adjust as needed */
+}
+
+.wrapper .carousel {
+  font-size: 0px;
+  cursor: pointer;
+  overflow: hidden;
+  white-space: nowrap;
+  scroll-behavior: smooth;
+}
+
+.carousel {
+  display: flex;
+  overflow-x: scroll;
+  white-space: nowrap;
+  border-radius: 10px;
+}
+
+.carousel.dragging {
+  cursor: grab;
+  scroll-behavior: auto;
+}
+
+.carousel.dragging img {
+  pointer-events: none;
+}
+
+.carousel img {
+  width: auto;
+  height: 340px;
   object-fit: cover;
+  user-select: none;
+  margin-left: 14px;
+  width: calc(100% / 3);
 }
 
-#certificates h2 {
-  color: #C5705D; /* Match your theme color */
-  margin-bottom: 40px;
-  font-weight: bold;
+.carousel img:first-child {
+  margin-left: 0px;
+}
+
+@media screen and (max-width: 900px) {
+  .carousel img {
+      width: calc(100% / 2);
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .carousel img {
+      width: 100%;
+  }
 }
 
 
